# spotmicro_description

./: .gitignore  README.md  package.xml
config/: gazebo_plugins.xacro  test.urdf.gz_controller.yaml
launch/: spawn_hyq_control.launch  test.launch  view_urdf.launch
pybullet/: test_loadurdf.py
rviz/: urdf_viewer.rviz
src/: .#kinematics_dev.py  hyq.py  hyq_constants.py  kinematics.py  kinematics_dev.py  kinematics_hyq.py  motion_plan.py  robot_model.py  spot.py  visualizer.py  walk.py
src/cfg/: hyq.cfg
src/models/: cfg.py  spot.py  urdf.py
src/utils/: cfg.py
urdf/: hyq.urdf  spotmicroai.urdf  spotmicroai.urdf.xacro  test.urdf.xacro
worlds/: low_gravity.world  random_trash_cans.world
