<?xml version="1.0"?>
<package format="2">
  <name>spotmicro_description</name>
  <version>0.1.0</version>
  <description>CHAMP Description Package</description>

  <maintainer email="uetake@jsk.imi.i.u-tokyo.ac.jp">ktro2828</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>